// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Test BlockNote-Prosemirror conversion > Case: custom inline content schema > Convert mention/basic to/from prosemirror 1`] = `
{
  "attrs": {
    "backgroundColor": "default",
    "id": "1",
    "textColor": "default",
  },
  "content": [
    {
      "attrs": {
        "textAlignment": "left",
      },
      "content": [
        {
          "text": "I enjoy working with ",
          "type": "text",
        },
        {
          "attrs": {
            "user": "Matthew",
          },
          "type": "mention",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "blockContainer",
}
`;

exports[`Test BlockNote-Prosemirror conversion > Case: custom inline content schema > Convert tag/basic to/from prosemirror 1`] = `
{
  "attrs": {
    "backgroundColor": "default",
    "id": "1",
    "textColor": "default",
  },
  "content": [
    {
      "attrs": {
        "textAlignment": "left",
      },
      "content": [
        {
          "text": "I love ",
          "type": "text",
        },
        {
          "content": [
            {
              "text": "BlockNote",
              "type": "text",
            },
          ],
          "type": "tag",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "blockContainer",
}
`;

exports[`Test BlockNote-Prosemirror conversion > Case: custom style schema > Convert fontSize/basic to/from prosemirror 1`] = `
{
  "attrs": {
    "backgroundColor": "default",
    "id": "1",
    "textColor": "default",
  },
  "content": [
    {
      "attrs": {
        "textAlignment": "left",
      },
      "content": [
        {
          "marks": [
            {
              "attrs": {
                "stringValue": "18px",
              },
              "type": "fontSize",
            },
          ],
          "text": "This is text with a custom fontSize",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "blockContainer",
}
`;

exports[`Test BlockNote-Prosemirror conversion > Case: custom style schema > Convert small/basic to/from prosemirror 1`] = `
{
  "attrs": {
    "backgroundColor": "default",
    "id": "1",
    "textColor": "default",
  },
  "content": [
    {
      "attrs": {
        "textAlignment": "left",
      },
      "content": [
        {
          "marks": [
            {
              "type": "small",
            },
          ],
          "text": "This is a small text",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "blockContainer",
}
`;

exports[`Test BlockNote-Prosemirror conversion > Case: default schema > Convert complex/misc to/from prosemirror 1`] = `
{
  "attrs": {
    "backgroundColor": "blue",
    "id": "1",
    "textColor": "yellow",
  },
  "content": [
    {
      "attrs": {
        "level": 2,
        "textAlignment": "right",
      },
      "content": [
        {
          "marks": [
            {
              "type": "bold",
            },
            {
              "type": "underline",
            },
          ],
          "text": "Heading ",
          "type": "text",
        },
        {
          "marks": [
            {
              "type": "italic",
            },
            {
              "type": "strike",
            },
          ],
          "text": "2",
          "type": "text",
        },
      ],
      "type": "heading",
    },
    {
      "content": [
        {
          "attrs": {
            "backgroundColor": "red",
            "id": "2",
            "textColor": "default",
          },
          "content": [
            {
              "attrs": {
                "textAlignment": "left",
              },
              "content": [
                {
                  "text": "Paragraph",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "blockContainer",
        },
        {
          "attrs": {
            "backgroundColor": "default",
            "id": "3",
            "textColor": "default",
          },
          "content": [
            {
              "attrs": {
                "textAlignment": "left",
              },
              "type": "bulletListItem",
            },
          ],
          "type": "blockContainer",
        },
      ],
      "type": "blockGroup",
    },
  ],
  "type": "blockContainer",
}
`;

exports[`Test BlockNote-Prosemirror conversion > Case: default schema > Convert hardbreak/basic to/from prosemirror 1`] = `
{
  "attrs": {
    "backgroundColor": "default",
    "id": "1",
    "textColor": "default",
  },
  "content": [
    {
      "attrs": {
        "textAlignment": "left",
      },
      "content": [
        {
          "text": "Text1",
          "type": "text",
        },
        {
          "type": "hardBreak",
        },
        {
          "text": "Text2",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "blockContainer",
}
`;

exports[`Test BlockNote-Prosemirror conversion > Case: default schema > Convert hardbreak/between-links to/from prosemirror 1`] = `
{
  "attrs": {
    "backgroundColor": "default",
    "id": "1",
    "textColor": "default",
  },
  "content": [
    {
      "attrs": {
        "textAlignment": "left",
      },
      "content": [
        {
          "marks": [
            {
              "attrs": {
                "class": null,
                "href": "https://www.website.com",
                "target": "_blank",
              },
              "type": "link",
            },
          ],
          "text": "Link1",
          "type": "text",
        },
        {
          "type": "hardBreak",
        },
        {
          "marks": [
            {
              "attrs": {
                "class": null,
                "href": "https://www.website2.com",
                "target": "_blank",
              },
              "type": "link",
            },
          ],
          "text": "Link2",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "blockContainer",
}
`;

exports[`Test BlockNote-Prosemirror conversion > Case: default schema > Convert hardbreak/end to/from prosemirror 1`] = `
{
  "attrs": {
    "backgroundColor": "default",
    "id": "1",
    "textColor": "default",
  },
  "content": [
    {
      "attrs": {
        "textAlignment": "left",
      },
      "content": [
        {
          "text": "Text1",
          "type": "text",
        },
        {
          "type": "hardBreak",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "blockContainer",
}
`;

exports[`Test BlockNote-Prosemirror conversion > Case: default schema > Convert hardbreak/link to/from prosemirror 1`] = `
{
  "attrs": {
    "backgroundColor": "default",
    "id": "1",
    "textColor": "default",
  },
  "content": [
    {
      "attrs": {
        "textAlignment": "left",
      },
      "content": [
        {
          "marks": [
            {
              "attrs": {
                "class": null,
                "href": "https://www.website.com",
                "target": "_blank",
              },
              "type": "link",
            },
          ],
          "text": "Link1",
          "type": "text",
        },
        {
          "type": "hardBreak",
        },
        {
          "marks": [
            {
              "attrs": {
                "class": null,
                "href": "https://www.website.com",
                "target": "_blank",
              },
              "type": "link",
            },
          ],
          "text": "Link1",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "blockContainer",
}
`;

exports[`Test BlockNote-Prosemirror conversion > Case: default schema > Convert hardbreak/multiple to/from prosemirror 1`] = `
{
  "attrs": {
    "backgroundColor": "default",
    "id": "1",
    "textColor": "default",
  },
  "content": [
    {
      "attrs": {
        "textAlignment": "left",
      },
      "content": [
        {
          "text": "Text1",
          "type": "text",
        },
        {
          "type": "hardBreak",
        },
        {
          "text": "Text2",
          "type": "text",
        },
        {
          "type": "hardBreak",
        },
        {
          "text": "Text3",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "blockContainer",
}
`;

exports[`Test BlockNote-Prosemirror conversion > Case: default schema > Convert hardbreak/only to/from prosemirror 1`] = `
{
  "attrs": {
    "backgroundColor": "default",
    "id": "1",
    "textColor": "default",
  },
  "content": [
    {
      "attrs": {
        "textAlignment": "left",
      },
      "content": [
        {
          "type": "hardBreak",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "blockContainer",
}
`;

exports[`Test BlockNote-Prosemirror conversion > Case: default schema > Convert hardbreak/start to/from prosemirror 1`] = `
{
  "attrs": {
    "backgroundColor": "default",
    "id": "1",
    "textColor": "default",
  },
  "content": [
    {
      "attrs": {
        "textAlignment": "left",
      },
      "content": [
        {
          "type": "hardBreak",
        },
        {
          "text": "Text1",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "blockContainer",
}
`;

exports[`Test BlockNote-Prosemirror conversion > Case: default schema > Convert hardbreak/styles to/from prosemirror 1`] = `
{
  "attrs": {
    "backgroundColor": "default",
    "id": "1",
    "textColor": "default",
  },
  "content": [
    {
      "attrs": {
        "textAlignment": "left",
      },
      "content": [
        {
          "text": "Text1",
          "type": "text",
        },
        {
          "type": "hardBreak",
        },
        {
          "marks": [
            {
              "type": "bold",
            },
          ],
          "text": "Text2",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "blockContainer",
}
`;

exports[`Test BlockNote-Prosemirror conversion > Case: default schema > Convert image/basic to/from prosemirror 1`] = `
{
  "attrs": {
    "backgroundColor": "default",
    "id": "1",
    "textColor": "default",
  },
  "content": [
    {
      "attrs": {
        "caption": "Caption",
        "textAlignment": "left",
        "url": "exampleURL",
        "width": 256,
      },
      "type": "image",
    },
  ],
  "type": "blockContainer",
}
`;

exports[`Test BlockNote-Prosemirror conversion > Case: default schema > Convert image/button to/from prosemirror 1`] = `
{
  "attrs": {
    "backgroundColor": "default",
    "id": "1",
    "textColor": "default",
  },
  "content": [
    {
      "attrs": {
        "caption": "",
        "textAlignment": "left",
        "url": "",
        "width": 512,
      },
      "type": "image",
    },
  ],
  "type": "blockContainer",
}
`;

exports[`Test BlockNote-Prosemirror conversion > Case: default schema > Convert image/nested to/from prosemirror 1`] = `
{
  "attrs": {
    "backgroundColor": "default",
    "id": "1",
    "textColor": "default",
  },
  "content": [
    {
      "attrs": {
        "caption": "Caption",
        "textAlignment": "left",
        "url": "exampleURL",
        "width": 256,
      },
      "type": "image",
    },
    {
      "content": [
        {
          "attrs": {
            "backgroundColor": "default",
            "id": "2",
            "textColor": "default",
          },
          "content": [
            {
              "attrs": {
                "caption": "Caption",
                "textAlignment": "left",
                "url": "exampleURL",
                "width": 256,
              },
              "type": "image",
            },
          ],
          "type": "blockContainer",
        },
      ],
      "type": "blockGroup",
    },
  ],
  "type": "blockContainer",
}
`;

exports[`Test BlockNote-Prosemirror conversion > Case: default schema > Convert link/adjacent to/from prosemirror 1`] = `
{
  "attrs": {
    "backgroundColor": "default",
    "id": "1",
    "textColor": "default",
  },
  "content": [
    {
      "attrs": {
        "textAlignment": "left",
      },
      "content": [
        {
          "marks": [
            {
              "attrs": {
                "class": null,
                "href": "https://www.website.com",
                "target": "_blank",
              },
              "type": "link",
            },
          ],
          "text": "Website",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "class": null,
                "href": "https://www.website2.com",
                "target": "_blank",
              },
              "type": "link",
            },
          ],
          "text": "Website2",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "blockContainer",
}
`;

exports[`Test BlockNote-Prosemirror conversion > Case: default schema > Convert link/basic to/from prosemirror 1`] = `
{
  "attrs": {
    "backgroundColor": "default",
    "id": "1",
    "textColor": "default",
  },
  "content": [
    {
      "attrs": {
        "textAlignment": "left",
      },
      "content": [
        {
          "marks": [
            {
              "attrs": {
                "class": null,
                "href": "https://www.website.com",
                "target": "_blank",
              },
              "type": "link",
            },
          ],
          "text": "Website",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "blockContainer",
}
`;

exports[`Test BlockNote-Prosemirror conversion > Case: default schema > Convert link/styled to/from prosemirror 1`] = `
{
  "attrs": {
    "backgroundColor": "default",
    "id": "1",
    "textColor": "default",
  },
  "content": [
    {
      "attrs": {
        "textAlignment": "left",
      },
      "content": [
        {
          "marks": [
            {
              "type": "bold",
            },
            {
              "attrs": {
                "class": null,
                "href": "https://www.website.com",
                "target": "_blank",
              },
              "type": "link",
            },
          ],
          "text": "Web",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "class": null,
                "href": "https://www.website.com",
                "target": "_blank",
              },
              "type": "link",
            },
          ],
          "text": "site",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "blockContainer",
}
`;

exports[`Test BlockNote-Prosemirror conversion > Case: default schema > Convert paragraph/basic to/from prosemirror 1`] = `
{
  "attrs": {
    "backgroundColor": "default",
    "id": "1",
    "textColor": "default",
  },
  "content": [
    {
      "attrs": {
        "textAlignment": "left",
      },
      "content": [
        {
          "text": "Paragraph",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "blockContainer",
}
`;

exports[`Test BlockNote-Prosemirror conversion > Case: default schema > Convert paragraph/empty to/from prosemirror 1`] = `
{
  "attrs": {
    "backgroundColor": "default",
    "id": "1",
    "textColor": "default",
  },
  "content": [
    {
      "attrs": {
        "textAlignment": "left",
      },
      "type": "paragraph",
    },
  ],
  "type": "blockContainer",
}
`;

exports[`Test BlockNote-Prosemirror conversion > Case: default schema > Convert paragraph/nested to/from prosemirror 1`] = `
{
  "attrs": {
    "backgroundColor": "default",
    "id": "1",
    "textColor": "default",
  },
  "content": [
    {
      "attrs": {
        "textAlignment": "left",
      },
      "content": [
        {
          "text": "Paragraph",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    {
      "content": [
        {
          "attrs": {
            "backgroundColor": "default",
            "id": "2",
            "textColor": "default",
          },
          "content": [
            {
              "attrs": {
                "textAlignment": "left",
              },
              "content": [
                {
                  "text": "Nested Paragraph 1",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "blockContainer",
        },
        {
          "attrs": {
            "backgroundColor": "default",
            "id": "3",
            "textColor": "default",
          },
          "content": [
            {
              "attrs": {
                "textAlignment": "left",
              },
              "content": [
                {
                  "text": "Nested Paragraph 2",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "blockContainer",
        },
      ],
      "type": "blockGroup",
    },
  ],
  "type": "blockContainer",
}
`;

exports[`Test BlockNote-Prosemirror conversion > Case: default schema > Convert paragraph/styled to/from prosemirror 1`] = `
{
  "attrs": {
    "backgroundColor": "pink",
    "id": "1",
    "textColor": "orange",
  },
  "content": [
    {
      "attrs": {
        "textAlignment": "center",
      },
      "content": [
        {
          "text": "Plain ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "stringValue": "red",
              },
              "type": "textColor",
            },
          ],
          "text": "Red Text ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "stringValue": "blue",
              },
              "type": "backgroundColor",
            },
          ],
          "text": "Blue Background ",
          "type": "text",
        },
        {
          "marks": [
            {
              "attrs": {
                "stringValue": "red",
              },
              "type": "textColor",
            },
            {
              "attrs": {
                "stringValue": "blue",
              },
              "type": "backgroundColor",
            },
          ],
          "text": "Mixed Colors",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "blockContainer",
}
`;
